Bug 285639 - Mailfilter agent spams 'No items found' errors when manually filtering
Summary: Mailfilter agent spams 'No items found' errors when manually filtering
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-03 11:50 UTC by Christophe Marin
Modified: 2011-11-03 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-11-03 11:50:18 UTC
Using master.
Previously, my kde-apps, konsole, kate commits email were stored in the same directory (let's call it "Apps"). Today, I've set up a few new filters to move some messages to particular directories. If I select all the messages from the "Apps" directory + ctrl-J, I'm getting spammed by the mailfilter agent for items that are not supposed to be moved

The interesting filters:

[Filter #35]
Applicability=2
AutomaticName=false
ConfigureShortcut=false
ConfigureToolbar=false
Enabled=true
Icon=
StopProcessingHere=true
ToolbarName=<List-Id>: kde-commits.kde.org - kde-apps
accounts-set=akonadi_imap_resource_7
action-args-0=174
action-name-0=transfer
actions=1
apply-on=check-mail,manual-filtering
contentsA=kde-commits.kde.org
contentsB=kde-baseapps
fieldA=List-Id
fieldB=X-Commit-Project
funcA=contains
funcB=equals
identifier=4apQePidqJJd1dn1
name=<List-Id>: kde-commits.kde.org - kde-apps
operator=and
rules=2

[Filter #36]
Applicability=2
AutomaticName=false
ConfigureShortcut=false
ConfigureToolbar=false
Enabled=true
Icon=
StopProcessingHere=true
ToolbarName=<List-Id>: kde-commits.kde.org - konsole
accounts-set=akonadi_imap_resource_7
action-args-0=965
action-name-0=transfer
actions=1
apply-on=check-mail,manual-filtering
contentsA=kde-commits.kde.org
contentsB=konsole
fieldA=List-Id
fieldB=X-Commit-Project
funcA=contains
funcB=equals
identifier=4apQePidqJJd1dn1
name=<List-Id>: kde-commits.kde.org - konsole
operator=and
rules=2

[Filter #37]
Applicability=2
AutomaticName=false
ConfigureShortcut=false
ConfigureToolbar=false
Enabled=true
Icon=
StopProcessingHere=true
ToolbarName=<List-Id>: kde-commits.kde.org - kate
accounts-set=akonadi_imap_resource_7
action-args-0=966
action-name-0=transfer
actions=1
apply-on=check-mail,manual-filtering
contentsA=kde-commits.kde.org
contentsB=kate
fieldA=List-Id
fieldB=X-Commit-Project
funcA=contains
funcB=contains
identifier=4apQePidqJJd1dn1
name=<List-Id>: kde-commits.kde.org - kate
operator=and
rules=2


-- 

The akonadiconsole log:
953 OK MOVE complete 
954 UID MOVE 99866 965 
954 OK MOVE complete 
955 UID MOVE 99865 965 
955 OK MOVE complete 
956 UID MOVE 99864 965 
956 OK MOVE complete 
957 UID MOVE 99863 174 
957 NO No items found 
958 UID MOVE 99862 174 
958 NO No items found 
959 UID MOVE 99861 174 
959 NO No items found 
960 UID MOVE 99860 174 
960 NO No items found 
961 UID MOVE 99859 174 
961 NO No items found 
962 UID MOVE 99858 174 
962 NO No items found 
963 UID MOVE 99857 174 
963 NO No items found 
964 UID MOVE 99856 174 
964 NO No items found 
965 UID MOVE 99855 174 
965 NO No items found 
966 UID MOVE 99854 965 
966 OK MOVE complete 
967 UID MOVE 99853 174 
967 NO No items found 
968 UID MOVE 99852 174 
968 NO No items found 
969 UID MOVE 99851 174 
969 NO No items found 
970 UID MOVE 99850 174 
970 NO No items found 
971 UID MOVE 99849 174 
971 NO No items found 
972 UID MOVE 99848 174 
972 NO No items found 
973 UID MOVE 99847 174 
973 NO No items found 
974 UID MOVE 99846 174 
974 NO No items found 
975 UID MOVE 99845 174 
975 NO No items found 
976 UID MOVE 99844 965 
976 OK MOVE complete 
977 UID MOVE 99843 174 
977 NO No items found 
978 UID MOVE 99842 174 
978 NO No items found 
979 UID MOVE 99841 965 
979 OK MOVE complete 
980 UID MOVE 99840 174 
980 NO No items found 

etc...

The collection 174 is the directory 'Apps', 965 is the konsole dir.

in other words, I'm getting an error box for each item which is not supposed to be moved
Comment 1 Laurent Montel 2011-11-03 12:20:59 UTC
I confirm it.
Will fix it.
Comment 2 Laurent Montel 2011-11-03 12:38:05 UTC
Git commit f267acb9a45247b597c1f4ade4188ddc82be008d by Montel Laurent.
Committed on 03/11/2011 at 13:37.
Pushed by mlaurent into branch 'master'.

Fix Bug 285639 - Mailfilter agent spams 'No items found' errors when manually filtering

BUG: 285639

M  +9    -2    mailfilteragent/filtermanager.cpp

http://commits.kde.org/kdepim/f267acb9a45247b597c1f4ade4188ddc82be008d