Fix Bug 285639 - Mailfilter agent spams 'No items found' errors when manually filtering

BUG: 285639